--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ margin-left: 800px;
 }
 
 video { /*video on homepage*/
-width: 96%;
+width: 1550px;
 margin-left: 50px;
 }
 .about {/*about text, link and dropdown icon*/
